<resources>
    <string name="app_name">One Color</string>
    <string name="Splash_Screen_text">Crisp Clean Fun</string>
    <string name="play_button">PLAY</string>
    <string name="game_title">One Color</string>
    <string name="green">G</string>
    <string name="red">R</string>
    <string name="yellow">Y</string>
    <string name="level_select">Choose Your Level</string>
    <string name="level_1">1</string>
    <string name="level_2">2</string>
    <string name="level_3">3</string>
    <string name="level_4">4</string>
    <string name="level_5">5</string>
    <string name="level_6">6</string>
    <string name="level_7">7</string>
    <string name="level_8">8</string>
    <string name="level_9">9</string>
    <string name="level_10">10</string>
    <string name="level_11">11</string>
    <string name="level_12">12</string>
    <string name="level_13">13</string>
    <string name="level_14">14</string>
    <string name="level_15">15</string>
    <string name="level_16">16</string>
    <string name="level_17">17</string>
    <string name="level_18">18</string>
    <string name="level_19">19</string>
    <string name="level_20">20</string>
    <string name="level_21">21</string>
    <string name="level_22">22</string>
    <string name="level_23">23</string>
    <string name="level_24">24</string>
    <string name="level_25">25</string>
    <string name="level_26">26</string>
    <string name="level_27">27</string>
    <string name="level_28">28</string>
    <string name="level_29">29</string>
    <string name="level_30">30</string>
    <string name="level_31">31</string>
    <string name="level_32">32</string>
    <string name="level_33">33</string>
    <string name="level_34">34</string>
    <string name="level_35">35</string>
    <string name="level_36">36</string>
    <string name="level_37">37</string>
    <string name="level_38">38</string>
    <string name="level_39">39</string>
    <string name="level_40">40</string>
    <string name="level_41">41</string>
    <string name="level_42">42</string>
    <string name="level_43">43</string>
    <string name="level_44">44</string>
    <string name="level_45">45</string>
    <string name="level_46">46</string>
    <string name="level_47">47</string>
    <string name="level_48">48</string>
    <string name="level_49">49</string>
    <string name="level_50">50</string>
    <string name="level_51">51</string>
    <string name="level_52">52</string>
    <string name="level_53">53</string>
    <string name="level_54">54</string>
    <string name="level_55">55</string>
    <string name="level_56">56</string>
    <string name="level_57">57</string>
    <string name="level_58">58</string>
    <string name="level_59">59</string>
    <string name="level_60">60</string>
    <string name="menu">menu</string>
    <string name="help">help</string>
    <string name="about">about</string>
    <string name="music">Music</string>
    <string name="x">X</string>
    <string name="you_won">YOU WON!</string>
    <string name="level_select_btn">Level Select</string>
    <string name="next_level_btn">NEXT LEVEL</string>
    <string name="select_text">What would you like to do?</string>
    <string name="replay">Replay</string>
    <string name="coming_soon">Next Level Coming Soon!</string>
    <string name="back_btn">Back</string>
    <string name="retry_btn">Retry</string>
    <string name="tutorial_btn">Tutorial</string>
    <string name="tutorial_begin_text">You can replay this tutorial anytime so don\'t worry about forgetting something and just have fun!</string>
    <string name="credits">Credits</string>
</resources>
