<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    android:id="@+id/level_14"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TableLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:background="@android:color/white"
        tools:context=".Level14">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center" >

            <Button
                android:id="@+id/bu1"
                android:layout_width="40pt"
                android:layout_height="40pt"
                android:layout_margin="1dp"
                android:background="@color/colorBananaYellow"
                android:textSize="0sp"
                android:onClick="buClick"
                android:text="Y"/>

            <Button
                android:id="@+id/bu2"
                android:layout_width="40pt"
                android:layout_height="40pt"
                android:layout_margin="1dp"
                android:background="@color/colorAndroidGreen"
                android:onClick="buClick"
                android:text="G"
                android:textSize="0sp"/>

            <Button
                android:id="@+id/bu3"
                android:layout_width="40pt"
                android:layout_height="40pt"
                android:layout_margin="1dp"
                android:background="@color/colorBananaYellow"
                android:textSize="0sp"
                android:onClick="buClick"
                android:text="Y"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center" >

            <Button
                android:visibility="invisible"
                android:id="@+id/bu4"
                android:layout_width="40pt"
                android:layout_height="40pt"
                android:layout_margin="1dp"
                android:background="@color/colorAndroidGreen"
                android:onClick="buClick"
                android:text="G"
                android:textSize="0sp"/>

            <Button
                android:id="@+id/bu5"
                android:layout_width="40pt"
                android:layout_height="40pt"
                android:layout_margin="1dp"
                android:background="@color/colorBananaYellow"
                android:textSize="0sp"
                android:onClick="buClick"
                android:text="Y"/>

            <Button
                android:visibility="invisible"
                android:id="@+id/bu6"
                android:layout_width="40pt"
                android:layout_height="40pt"
                android:layout_margin="1dp"
                android:background="@color/colorAndroidGreen"
                android:onClick="buClick"
                android:text="G"
                android:textSize="0sp"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center" >

            <Button
                android:visibility="invisible"
                android:id="@+id/bu7"
                android:layout_width="40pt"
                android:layout_height="40pt"
                android:layout_margin="1dp"
                android:background="@color/colorBananaYellow"
                android:textSize="0sp"
                android:onClick="buClick"
                android:text="Y"/>
            <Button
                android:id="@+id/bu8"
                android:layout_width="40pt"
                android:layout_height="40pt"
                android:layout_margin="1dp"
                android:background="@color/colorBananaYellow"
                android:textSize="0sp"
                android:onClick="buClick"
                android:text="Y"/>

            <Button
                android:visibility="invisible"
                android:id="@+id/bu9"
                android:layout_width="40pt"
                android:layout_height="40pt"
                android:layout_margin="1dp"
                android:background="@color/colorBananaYellow"
                android:textSize="0sp"
                android:onClick="buClick"
                android:text="Y"/>
        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/level14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Level 14"
        android:textColor="@android:color/black"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/moves"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:text="Moves:"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/level14" />

    <TextView
        android:id="@+id/move_counter_14"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:text=""
        android:textColor="@android:color/black"
        app:layout_constraintStart_toEndOf="@+id/moves"
        app:layout_constraintTop_toBottomOf="@+id/level14" />

    <TextView
        android:id="@+id/high_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="75dp"
        android:text="Your High Score:"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/high_score_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="--"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/high_score" />

    <Button
        android:id="@+id/back_btn"
        android:layout_width="55dp"
        android:layout_height="40dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="#eaa535"
        android:onClick="winnerSelect"
        android:text="@string/back_btn"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/level14" />

    <Button
        android:id="@+id/retry_btn"
        android:layout_width="55dp"
        android:layout_height="40dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:background="@android:color/holo_blue_light"
        android:onClick="winnerSelect"
        android:text="@string/retry_btn"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toStartOf="@+id/back_btn"
        app:layout_constraintTop_toBottomOf="@+id/level14" />

    <Button
        android:id="@+id/menu"
        android:layout_width="60dp"
        android:layout_height="50dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/menu"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/undo_btn"
        android:layout_width="55dp"
        android:layout_height="35dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@android:color/black"
        android:onClick="undoSelect"
        android:text="Undo"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/high_score" />

</android.support.constraint.ConstraintLayout>